--- a/src/app/componentes/encabezado/edit-persona.component.html
+++ b/src/app/componentes/encabezado/edit-persona.component.html
@@ -7,14 +7,14 @@
             <fieldset>
               <legend class="text-center header">Persona a modificar</legend>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-input-text"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-regular fa-user"></i></span>
                 <div class="col-md-8" style="width: 100%;">
                   <input id="nombre" name="nombre" type="text" placeholder="Nombre de la Persona"
                     class="form-control" [(ngModel)]="persona.nombre" required>
                 </div>
               </div>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-input-text"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-regular fa-user"></i></span>
                 <div class="col-md-8" style="width: 100%;">
                   <input id="apellido" name="apellido" type="text" placeholder="Apellido de la Persona"
                     class="form-control" [(ngModel)]="persona.apellido" required>
